crates/hir-ty/tests/snapshots/javac_parity__parity_abstract_new.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Abstract.java:
abstract class A {}
class Abstract {
    void t() {
        new A();
    }
}

LSP (ours):
3:8: compiler.err.abstract.cant.be.instantiated: A is abstract; cannot be instantiated
JAVAC:
3:8: compiler.err.abstract.cant.be.instantiated: A is abstract; cannot be instantiated
VERDICT:
  matched: 1 · javac-only: 0 · ours-only: 0
