crates/hir-ty/tests/snapshots/javac_parity__parity_already_caught.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Caught.java:
import java.io.IOException;

class Caught {
    void t() {
        try {
            maybe();
        } catch (Exception e) {
        } catch (IOException e) {
        }
    }

    void maybe() throws IOException {}
}

LSP (ours):
7:17: compiler.err.except.already.caught: exception IOException has already been caught
JAVAC:
7:10: compiler.err.except.already.caught: exception IOException has already been caught
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(7, 17): compiler.err.except.already.caught
