crates/hir-ty/tests/snapshots/javac_parity__parity_cant_resolve_name.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Resolve.java:
class Resolve {
    void t() {
        missingVar;
    }
}

LSP (ours):
2:8: compiler.err.cant.resolve.location: cannot find symbol
  symbol:   variable missingVar
2:18: compiler.err.not.stmt: Not a statement: only assignment, increment, decrement, method call, and new object creation are allowed
JAVAC:
2:8: compiler.err.not.stmt: not a statement
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 2
MISMATCH:
  code compiler.err.not.stmt
    ours:  @(2, 8) compiler.err.cant.resolve.location
    javac: @(2, 8) compiler.err.not.stmt
MISMATCH:
  ours-only @(2, 18): compiler.err.not.stmt
