crates/hir-ty/tests/snapshots/javac_parity__parity_for_each.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Each.java:
class Each {
    void t() {
        for (int x : 3) {}
    }
}

LSP (ours):
2:20: compiler.err.foreach.not.applicable.to.type: for-each not applicable to expression type
  required: array or java.lang.Iterable
  found:    int
JAVAC:
2:21: compiler.err.foreach.not.applicable.to.type: for-each not applicable to expression type
  required: array or java.lang.Iterable
  found:    int
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(2, 20): compiler.err.foreach.not.applicable.to.type
