crates/hir-ty/tests/snapshots/javac_parity__parity_generic_array.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/GArray.java:
import java.util.List;

class GArray {
    void t() {
        List<String>[] a = new List<String>[3];
    }
}

LSP (ours):
4:26: compiler.err.generic.array.creation: generic array creation
JAVAC:
4:27: compiler.err.generic.array.creation: generic array creation
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(4, 26): compiler.err.generic.array.creation
