crates/hir-ty/tests/snapshots/javac_parity__parity_incomparable.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Cmp.java:
class Cmp {
    void t() {
        boolean b = 1 == "x";
    }
}

LSP (ours):
2:20: compiler.err.operator.cant.be.applied.1: bad operand types for binary operator '=='
  first type:  int
  second type: String
JAVAC:
2:22: compiler.err.operator.cant.be.applied.1: bad operand types for binary operator '=='
  first type:  int
  second type: String
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(2, 20): compiler.err.operator.cant.be.applied.1
