crates/hir-ty/tests/snapshots/javac_parity__parity_non_boolean_condition.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Cond.java:
class Cond {
    boolean t() {
        if (1) { return true; }
        return false;
    }
}

LSP (ours):
2:10: compiler.err.prob.found.req: incompatible types: int cannot be converted to boolean
JAVAC:
2:12: compiler.err.prob.found.req: incompatible types: int cannot be converted to boolean
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(2, 10): compiler.err.prob.found.req
