crates/hir-ty/tests/snapshots/javac_parity__parity_not_stmt.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Stmt.java:
class Stmt {
    void t() {
        int a = 1;
        missingThing;
    }
}

LSP (ours):
3:8: compiler.err.cant.resolve.location: cannot find symbol
  symbol:   variable missingThing
3:20: compiler.err.not.stmt: Not a statement: only assignment, increment, decrement, method call, and new object creation are allowed
JAVAC:
3:8: compiler.err.not.stmt: not a statement
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 2
MISMATCH:
  code compiler.err.not.stmt
    ours:  @(3, 8) compiler.err.cant.resolve.location
    javac: @(3, 8) compiler.err.not.stmt
MISMATCH:
  ours-only @(3, 20): compiler.err.not.stmt
