crates/hir-ty/tests/snapshots/javac_parity__parity_throw_non_throwable.snap
---
source: crates/hir-ty/tests/javac_parity.rs
expression: out
---
FILE /src/Throwable.java:
class Throwable {
    void t() {
        throw new Object();
    }
}

LSP (ours):
2:13: compiler.err.prob.found.req: incompatible types: Object cannot be converted to Throwable
JAVAC:
2:8: compiler.err.prob.found.req: incompatible types: Object cannot be converted to Throwable
VERDICT:
  matched: 0 · javac-only: 1 · ours-only: 1
MISMATCH:
  ours-only @(2, 13): compiler.err.prob.found.req
